# AdventOfCode2021

./: .gitignore  CMakeLists.txt  README.md
day1/: count_increases.cpp  count_window_increases.cpp
day10/: sytax_scoring.cpp
day11/: dumbo_octopus.cpp  mat.h
day12/: passage_pathing.cpp
day13/: transparent_origami.cpp
day14/: extended_polymerization.cpp
day15/: chiton.cpp
day16/: packet_decoder.cpp
day17/: trick_shot.cpp
day18/: snailfish.cpp
day19/: beacon_scanner.cpp
day2/: position.cpp
day20/: trench_map.cpp
day21/: dirac_dice.cpp
day22/: reactor_reboot.cpp
day23/: amphipod.cpp
day24/: arithmetic_logic_unit.cpp
day25/: sea_cucumber.cpp
day3/: diagnostic.cpp
day4/: bingo.cpp
day5/: lines.cpp
day6/: lanternfish.cpp
day7/: crab.cpp
day8/: seven_segment_search.cpp
day9/: smoke_basin.cpp
