cmake_minimum_required(VERSION 3.17)
project(AOC2021)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

function(addExe name src)
    add_executable(${name} ${src})
    math(EXPR lastIndex "${ARGC} - 1")
    if (${ARGC} GREATER 2)
        foreach(index RANGE 2 ${lastIndex})
            target_link_libraries(${name} ${ARGV${index}})
        endforeach()
    endif()
endfunction()

addExe("day_1" day1/count_window_increases.cpp)
addExe("day_2" day2/position.cpp)
addExe("day_3" day3/diagnostic.cpp)
addExe("day_4" day4/bingo.cpp)
addExe("day_5" day5/lines.cpp)
addExe("day_6" day6/lanternfish.cpp)
addExe("day_7" day7/crab.cpp)
addExe("day_8" day8/seven_segment_search.cpp)
addExe("day_9" day9/smoke_basin.cpp)
addExe("day_10" day10/sytax_scoring.cpp)
addExe("day_11" day11/dumbo_octopus.cpp)
addExe("day_12" day12/passage_pathing.cpp)
addExe("day_13" day13/transparent_origami.cpp)
addExe("day_14" day14/extended_polymerization.cpp)
